[tool.poetry]
name = "big-bull"
version = "0.3.0"
description = "Web framework for writing asynchronous microservices"
authors = ["Buster Styren <buster.styren@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
opentracing = "^2.4.0"
aiohttp = "^3.7.3"
aiokafka = "^0.7.0"
jaeger-client = "^4.4.0"
opentracing-instrumentation = "^3.3.1"
prometheus-client = "^0.9.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.poetry.scripts]
big-bull = 'big_bull.big_bull:main'
